--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,45 @@
+# Custom
+compare_docker_images
+_compare_history.py
+*-hidden*
+
+# VSCode
+.vscode
+
+.python-version
+
+# ----- MacOs -----
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# ----- Python -----
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
